# NeoN

./: .cmake-format.py  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  REUSE.toml  _typos.toml
Build_PR_/: .buildinfo  contributing.html  genindex.html  installation.html  objects.inv
Build_PR_238/: contributing.html  genindex.html  mpi_architecture.html  search.html
Build_PR_294/: genindex.html  searchindex.js
Build_PR_301/: genindex.html  searchindex.js
Build_PR_304/: contributing.html  genindex.html  index.html  installation.html  mpi_architecture.html  objects.inv  search.html  searchindex.js
Build_PR_305/: index.html  objects.inv
Build_PR_306/: searchindex.js
Build_PR_313/: mpi_architecture.html
Build_PR_315/: objects.inv
Build_PR_318/: genindex.html  objects.inv  searchindex.js
Build_PR_319/: genindex.html  objects.inv  searchindex.js
Build_PR_321/: genindex.html
Build_PR_322/: installation.html  searchindex.js
Build_PR_326/: index.html  installation.html  objects.inv  searchindex.js
Build_PR_327/: index.html  objects.inv
Build_PR_335/: index.html
Build_PR_337/: installation.html
Build_PR_341/: contributing.html
Build_PR_351/: index.html
include/: CMakeLists.txt
include/NeoN/core/: array.hpp  containerFreeFunctions.hpp  copyTo.hpp  demangle.hpp  dictionary.hpp  error.hpp  info.hpp  initialization.hpp  input.hpp  logging.hpp  macros.hpp  parallelAlgorithms.hpp  runtimeSelectionFactory.hpp  segmentedVector.hpp  time.hpp  tokenList.hpp  vector.hpp  view.hpp
include/NeoN/core/database/: collection.hpp  database.hpp  document.hpp  fieldCollection.hpp  fieldDatabase.hpp  oldTimeCollection.hpp
include/NeoN/core/executor/: CPUExecutor.hpp  GPUExecutor.hpp  executor.hpp  serialExecutor.hpp
include/NeoN/core/io/: adiosConfig.hpp  adiosCore.hpp  adiosEngine.hpp  buffer.hpp  config.hpp  core.hpp  dataOutput.hpp  engine.hpp  staticIOComponents.hpp
include/NeoN/core/mpi/: environment.hpp  fullDuplexCommBuffer.hpp  halfDuplexCommBuffer.hpp  operators.hpp
include/NeoN/core/primitives/: label.hpp  scalar.hpp  tensor.hpp  traits.hpp  vec3.hpp
include/NeoN/core/vector/: vector.hpp  vectorFreeFunctions.hpp  vectorTypeDefs.hpp
include/NeoN/distributed/: matrix.hpp
include/NeoN/dsl/: coeff.hpp  ddt.hpp  ddtPhiCorrPostAssembly.hpp  explicit.hpp  expression.hpp  implicit.hpp  operator.hpp  solver.hpp  spatialOperator.hpp  temporalOperator.hpp
include/NeoN/fields/: boundaryData.hpp  boundaryFields.hpp  domainField.hpp  field.hpp  fieldFreeFunctions.hpp  fieldTypeDefs.hpp  segmentedField.hpp  segmentedVector.hpp  vectorTypeDefs.hpp
include/NeoN/fields/operations/: sum.hpp
include/NeoN/finiteVolume/cellCentred/: boundary.hpp
include/NeoN/finiteVolume/cellCentred/auxiliary/: coNum.hpp
include/NeoN/finiteVolume/cellCentred/boundary/: boundaryPatchMixin.hpp  surfaceBoundaryFactory.hpp  volumeBoundaryFactory.hpp
include/NeoN/finiteVolume/cellCentred/boundary/surface/: calculated.hpp  ddtFluxCorrBoundary.hpp  empty.hpp  fixedValue.hpp  processor.hpp  symmetry.hpp
include/NeoN/finiteVolume/cellCentred/boundary/volume/: calculated.hpp  empty.hpp  extrapolated.hpp  fixedGradient.hpp  fixedValue.hpp  processor.hpp  symmetry.hpp
include/NeoN/finiteVolume/cellCentred/dsl/: expression.hpp
include/NeoN/finiteVolume/cellCentred/faceNormalGradient/: faceNormalGradient.hpp  uncorrected.hpp
include/NeoN/finiteVolume/cellCentred/fields/: domain.hpp  fieldDatabase.hpp  geometricField.hpp  surfaceField.hpp  volumeField.hpp
include/NeoN/finiteVolume/cellCentred/interpolation/: linear.hpp  surfaceInterpolation.hpp  upwind.hpp
include/NeoN/finiteVolume/cellCentred/linearAlgebra/: sparsityPattern.hpp  utilities.hpp
include/NeoN/finiteVolume/cellCentred/operators/: ddtOperator.hpp  divOperator.hpp  gaussGreenDiv.hpp  gaussGreenGrad.hpp  gaussGreenLaplacian.hpp  gradOperator.hpp  laplacianOperator.hpp  sourceTerm.hpp  surfaceIntegrate.hpp
include/NeoN/finiteVolume/cellCentred/stencil/: basicGeometryScheme.hpp  cellToFaceStencil.hpp  geometryScheme.hpp  stencilDataBase.hpp
include/NeoN/helpers/: exceptions.hpp
include/NeoN/linearAlgebra/: CSRMatrix.hpp  diagonalSolver.hpp  ginkgo.hpp  linearSystem.hpp  petsc.hpp  petscSolverContext.hpp  solver.hpp  sparsityPattern.hpp  utilities.hpp
include/NeoN/mesh/unstructured/: boundaryMesh.hpp  communicator.hpp  unstructuredMesh.hpp
include/NeoN/timeIntegration/: backwardEuler.hpp  ddtPhiCorrBoundary.hpp  forwardEuler.hpp  rungeKutta.hpp  sundials.hpp  timeIntegration.hpp
include/NeoN/timeIntegration/ddt/: BDF1.hpp  BDF2.hpp  DdtScheme.hpp  Euler.hpp  backward.hpp
src/bindings/: CMakeLists.txt  my_ext.cpp
test/bindings/: CMakeLists.txt  executor.py  test_executor.py  test_mesh.py  test_vec3.py  test_vector.py
test/catch2/: CMakeLists.txt  catch2_common.hpp  executorGenerator.hpp  mpiGlobals.cpp  mpiGlobals.hpp  mpiReporter.cpp  mpiReporter.hpp  mpiSerialization.cpp  mpiSerialization.hpp  test_main.cpp  test_main_mpi.cpp
test/finiteVolume/: CMakeLists.txt
test/finiteVolume/cellCentred/auxiliary/: CMakeLists.txt  coNum.cpp
test/finiteVolume/cellCentred/boundary/: CMakeLists.txt
test/finiteVolume/cellCentred/boundary/surface/: CMakeLists.txt  surfFixedValue.cpp  surfSymmetry.cpp
test/finiteVolume/cellCentred/boundary/volume/: CMakeLists.txt  volFixedGradient.cpp  volFixedValue.cpp  volSymmetry.cpp
test/finiteVolume/cellCentred/faceNormalGradient/: CMakeLists.txt  uncorrected.cpp
test/finiteVolume/cellCentred/fields/: CMakeLists.txt  surfaceField.cpp  volumeField.cpp
test/finiteVolume/cellCentred/interpolation/: CMakeLists.txt  linear.cpp  surfaceInterpolation.cpp  upwind.cpp
test/finiteVolume/cellCentred/linearAlgebra/: CMakeLists.txt  fvccutilities.cpp  sparsityPattern.cpp
test/finiteVolume/cellCentred/operator/: CMakeLists.txt  common_operator.hpp  ddtOperator.cpp  gaussGreenDiv.cpp  laplacianOperator.cpp  sourceTerm.cpp
test/finiteVolume/cellCentred/stencil/: CMakeLists.txt  cellToFaceStencil.cpp
(+11033 files in other folders)
